--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/core": "^7.26.9",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
+    "sass": "^1.84.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -23,6 +26,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "sass-embedded": "^1.83.4",
     "vite": "^6.1.0"
   }
 }
