--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@babel/core": "^7.26.9",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.5",
-    "sass": "^1.84.0"
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.26.8",
@@ -27,6 +29,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "sass": "^1.85.0",
     "sass-embedded": "^1.83.4",
     "vite": "^6.1.0"
   }
